--- a/src/SGDS_Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/SGDS_Web/Views/Shared/_LoginPartial.cshtml
@@ -3,25 +3,18 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+<div class="d-flex align-items-center gap-3">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <span class="text-dark">Hello @User.Identity?.Name!</span>
+
+        <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
+            <button type="submit" class="btn btn-link p-0 text-dark logout-link">Logout</button>
         </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
-</ul>
+    }
+    else
+    {
+        <a class="text-dark auth-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="text-dark auth-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+    }
+</div>
